@@ -35,6 +35,7 @@ in the pager or task list.
 
 %install
 rm -rf $RPM_BUILD_ROOT
+mkdir -p $RPM_BUILD_ROOT%{_sysconfdir}/devilspie
 %makeinstall
 
 %find_lang %{name}
@@ -44,11 +45,29 @@ rm -rf $RPM_BUILD_ROOT
 
 %files -f %{name}.lang
 %defattr(-,root,root)
-%doc AUTHORS COPYING ChangeLog README NEWS TODO sample-config.xml devilspie.dtd
+%doc AUTHORS COPYING ChangeLog README NEWS TODO
+%dir %{_sysconfdir}/devilspie
 %{_bindir}/*
 %{_mandir}/man*/*
 
 %changelog
+* Mon Sep 26 2005 Lars R. Damerow <lars@pixar.com> 0.13
+- update to 0.13
+
+* Fri Sep 16 2005 Lars R. Damerow <lars@pixar.com> 0.11
+- update to 0.11
+- removed setwintype patch
+
+* Fri Sep 16 2005 Lars R. Damerow <lars@pixar.com> 0.10-2
+- patch to fix setwintype crash
+
+* Tue Aug 16 2005 Lars R. Damerow <lars@pixar.com> 0.10-1
+- update to 0.10
+
+* Mon Feb 07 2005 Lars R. Damerow <lars@pixar.com> 0.8-2
+- update to 0.8
+- add devilspie-reference.html
+
 * Fri May  2 2003 Frederic Crozat <fcrozat@mandrakesoft.com>
 - Package locale files
 
