@@ -1,5 +1,10 @@
 2005-09-27  Ross Burton  <ross@burtonini.com>
 
+	* devilspie.spec.in:
+	Update for 0.13, from Lars Damerow <lars@pixar.com>.
+
+2005-09-27  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* tests/Makefile.am:
 	* tests/*.ds:
